Revise authors list and add diversity guidelines
Updated the list of frequently tested authors and added guidelines for diversity in literary examples.

--- a/index.html
+++ b/index.html
@@ -648,9 +648,13 @@ GRAMATICKÉ PRAVIDLÁ NA TESTOVANIE:
 - Interpunkcia (čiarky v súvetí)
 - Vetné členy (prístavok, predmet, prívlastok)
 
-ČASTO TESTOVANÍ AUTORI:
-- Slovenská literatúra: Andrej Sládkovič, Jozef Gregor Tajovský, Martin Kukučín, Milo Urban, Dobroslav Chrobák, Ivan Krasko, Ján Smrek, Milan Rúfus, Dominik Tatarka
-- Svetová literatúra: William Shakespeare, Erich Maria Remarque, Alexander Sergejevič Puškin
+ČASTO TESTOVANÍ AUTORI (ROTUJ ICH, NEPOUŽÍVAJ ROVNAKÝCH):
+- Slovenská próza: Milo Urban, Jozef Cíger Hronský, Martin Kukučín, Dobroslav Chrobák, Ľudovít Fulka, Margita Figuli
+- Slovenská poézia: Ivan Krasko, Ján Smrek, Andrej Sládkovič, Pavol Országh Hviezdoslav, Milan Rúfus
+- Slovenská dráma: Jozef Gregor Tajovský, Ivan Stodola
+- Svetová literatúra: William Shakespeare, Erich Maria Remarque, Alexander Puškin, Lord Byron, Ernest Hemingway, Franz Kafka
+
+VYBER 8 RÔZNYCH AUTOROV - každý sa môže použiť MAX 1x v teste!
 
 PRÍKLAD TEXTOVEJ UKÁŽKY (Klasická slovenská próza):
 Názov: Živý bič
@@ -731,6 +735,12 @@ DISTRIBÚCIA 8 UKÁŽOK:
 6. Slovenská dráma (Jozef Gregor Tajovský)
 7. Súčasná esej/úvaha
 8. Literárna kritika
+
+⚠️ DÔLEŽITÉ - ROZMANITOSŤ:
+- Každá ukážka MUSÍ byť od INÉHO autora
+- Nepoužívaj rovnaké dielo 2x (napr. ak použiješ "Živý bič", nepoužívaj ho znova)
+- Variuj literárne obdobia (nie všetko z rovnakého obdobia)
+- Striedaj témy (jeden o prírode, druhý o láske, tretí o vojne, atď.)
 
 Každá ukážka: presne 8 otázok (5 MC + 3 short answer).
 
