--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
         // Hardcoded configuration - keys are set directly
         const config = {
             supabaseUrl: 'https://xbptbimgambfeiilymba.supabase.co',
-            supabaseKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhicHRiaW1nYW1iZmVpaWx5bWJhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzNjcyNTQsImV4cCI6MjA4NTk0MzI1NH0.hLbPMevuO6HVIlyCVYor7s0fu12XHgo5jB0JaNLf-UQ',
-            openaiKey: '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'  // ⚠️ REPLACE THIS WITH YOUR ACTUAL KEY
+            supabaseKey: 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhicHRiaW1nYW1iZmVpaWx5bWJhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAzNjcyNTQsImV4cCI6MjA4NTk0MzI1NH0.hLbPMevuO6HVIlyCVYor7s0fu12XHgo5jB0JaNLf-UQ'
+            // OpenAI key is now server-side in Netlify Function
         };
 
         function initializeSupabase() {
@@ -619,97 +619,26 @@
                 throw new Error(`Not enough questions for ${textInfo.type}. Found ${questions.length}, need 8.`);
             }
 
-            // 2. BUILD PROMPT FOR AI (only generate text + answer questions)
-            const questionList = questions.map((q, idx) => 
-                `${idx + 1}. [${q.question_type === 'multiple_choice' ? 'MC' : 'SA'}] ${q.question_template}`
-            ).join('\n');
-
-            const aiPrompt = `Vygeneruj textovú ukážku pre NÚCEM test.
-
-TYP: ${textInfo.desc}
-AUTOR/TÉMA: Vyber náhodne z: ${textInfo.authors}
-DĹŽKA: 200-300 slov
-
-Potom ODPOVEDZ na tieto KONKRÉTNE otázky o tvojom texte:
-
-${questionList}
-
-FORMÁT ODPOVEDE - vráť validný JSON:
-{
-  "title": "Názov diela/textu",
-  "text": "Celý text ukážky (200-300 slov). Použi [[text]] na zvýraznenie ak treba.",
-  "author": "Meno autora",
-  "genre": "${textInfo.type}",
-  "questions": [
-    {
-      "id": 1,
-      "question": "presný text otázky",
-      "type": "multiple_choice",
-      "options": ["(A) možnosť 1", "(B) možnosť 2", "(C) možnosť 3", "(D) možnosť 4"],
-      "correct": "A"
-    },
-    {
-      "id": 2,
-      "question": "presný text otázky",
-      "type": "short_answer",
-      "correct": "presná odpoveď"
-    }
-  ]
-}
-
-PRAVIDLÁ:
-- Text MUSÍ byť 200-300 slov, realistický
-- Multiple choice: 4 možnosti, odpoveď iba "A", "B", "C" alebo "D"
-- Short answer: PRESNÁ odpoveď (1-3 slová)
-- Ak otázka vyžaduje gramatiku (spodobovanie, slovný druh), text MUSÍ obsahovať príklady
-- Ak otázka vyžaduje literárny prostriedok (metafora), text MUSÍ ho obsahovať
-- Použitím [[text]] v texte vytvoríš zvýraznenie
-
-Vráť VÝLUČNE validný JSON bez markdown blokov.`;
-
-            // 3. CALL OPENAI
-            const response = await fetch('https://api.openai.com/v1/chat/completions', {
+            // 2. CALL NETLIFY FUNCTION (server-side API call)
+            const response = await fetch('/.netlify/functions/generate-block', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${config.openaiKey}`
+                    'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                    model: 'gpt-4o',
-                    messages: [
-                        { role: 'system', content: 'Si expert na tvorbu textov pre slovenské maturitné testy NÚCEM. Vraciaš VÝLUČNE validný JSON.' },
-                        { role: 'user', content: aiPrompt }
-                    ],
-                    temperature: 0.9,
-                    response_format: { type: "json_object" }
+                    blockIndex,
+                    textInfo,
+                    questions
                 })
             });
 
             if (!response.ok) {
                 const errorData = await response.json();
-                throw new Error(errorData.error?.message || 'OpenAI API error');
+                throw new Error(errorData.error || 'Failed to generate block');
             }
 
             const result = await response.json();
-            const content = result.choices[0].message.content;
-            
-            // Parse JSON
-            let parsed;
-            try {
-                parsed = JSON.parse(content);
-            } catch (e) {
-                const jsonMatch = content.match(/```json\n?([\s\S]*?)\n?```/);
-                if (jsonMatch) {
-                    parsed = JSON.parse(jsonMatch[1]);
-                } else {
-                    throw new Error('Failed to parse AI response');
-                }
-            }
-            
-            return {
-                block: parsed,
-                questionIds: questions.map(q => q.id)
-            };
+            return result;
         }
 
         async function generateTest() {
